loot changes
- added smithy chest
- made level 1 a bit smaller
- added a give parameter to the dungeon command to give novetly loot
items